# mnist

./: README.md  default.nix  mnist.cabal  shell.nix
src/: Mnist  Mnist.hs
